--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,6 +2,8 @@ $eb-blue: #085ac0;
 $eb-blue-hover: #65a5f4;
 $eb-shadow-blue: #064aa1;
 $eb-red: #f4474b;
+$border-grey: #dee3e5;
+$eb-prod-bg: #edf0f1;
 
 $fade: rgba(
   $color: #000000,
