--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -1,7 +1,10 @@
 @import "../../scss/variables.scss";
 
 .Carousel {
-  width: 60%;
+  width: 80vw;
+  display: flex;
+  justify-content: center;
+  padding-top: 5%;
 }
 
 .carouselContent {
@@ -15,6 +18,11 @@
   width: 100%;
   height: 400px;
   object-fit: cover;
+  display: flex;
+  overflow: hidden;
+  flex-grow: 0;
+  flex-shrink: 0;
+  transition: translate 400ms ease;
 }
 
 .arrowBtnLeft,
@@ -26,16 +34,22 @@
   top: 0;
   bottom: 0;
   padding: 1em;
-  transition: background-image 200ms ease-in-out;
+  opacity: 0.5;
+  transition: color 200ms ease-in-out;
   color: $eb-blue;
+  z-index: 999;
 }
 
 .arrowBtnLeft:hover {
   background-image: linear-gradient(to right, $fade, transparent);
   color: $eb-blue-hover;
+  opacity: 1;
+  transition: opacity 200ms ease-in-out;
 }
 
 .arrowBtnRight:hover {
   background-image: linear-gradient(to left, $fade, transparent);
   color: $eb-blue-hover;
+  opacity: 1;
+  transition: opacity 200ms ease-in-out;
 }
